--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Mi portafolio - Bienvenidos</title>
 </head>
 <body>
     <h1>Soy Harold Cervantes</h1>
+    <p>Este es un cambio en el index</p>
 </body>
 </html>
