Se agregó imagen de gatito y se dio color al h1

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Soy Harold Cervantes</h1>
     <p>Este es un cambio en el index</p>
+    <img src="./imagenes/licensed-image.jpg" alt="Gatito">
 </body>
 </html>
