Se agrega etiqueta span

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Soy Harold Cervantes</h1>
     <p>Este es un cambio en el index</p>
+    <span>Estoy en la rama master</span>
     <img src="./imagenes/licensed-image.jpg" alt="Gatito">
 </body>
 </html>
