Se agrega la página de contac

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Soy Harold Cervantes</h1>
     <p>Este es un cambio en el index</p>
     <span>Estoy en la rama master</span>
-    <img src="./imagenes/licensed-image.jpg" alt="Gatito">
+    <a href="./contac.html">Contactanos</a>
 </body>
 </html>
