Sea grega link de productos al index

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>Este es un cambio en el index</p>
     <span>Estoy en la rama master</span>
     <a href="./contac.html">Contactanos</a>
+    <a href="./products.html">Ver Productos</a>
 </body>
 </html>
