Primer commit para subir a GitHub

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <span>Estoy en la rama master</span>
     <a href="./contac.html">Contactanos</a>
     <a href="./products.html">Ver Productos</a>
+
+    <div>
+        <p>Este parrafo está en mi máquina local</p>
+    </div>
 </body>
 </html>
